test/tests/stages/18_structures/invalid_types/tag_resolution/conflicting_fun_param_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  struct
  identifier(s)
  ;
  int
  identifier(foo)
  (
  struct
  identifier(s)
  identifier(x)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  ;
  int
  identifier(foo)
  (
  struct
  identifier(s)
  identifier(x)
  )
  ;
  return
  const int(0)
  ;
  }
